--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Dedicated and Compassionate</h4>
+                            <h4 class="font-weight-light mb-4">Driven and capable, Shawna is an immense asset to every team she's been on.</h4>
                             <!-- <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;"> -->
                             <h5 class="font-weight-bold m-0">Tilak L.</h5>
                             <span>Former Teammate</span>
